--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="hero-image" data-aos="fade-left">
-                <img src="/image/about.jpg" alt="Pranshu Shah">
+                <img src="image/about.jpg" alt="Pranshu Shah">
             </div>
         </div>
     </section>
