image portfolio-website

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <!-- Project 1 -->
                 <div class="project-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-image">
-                        <img src="image/pomodoro-extension/pomodoro.webp" alt="Chrome Extension">
+                        <img src="image/portfolio-website.png" alt="Chrome Extension">
                     </div>
                     <div class="project-info">
                         <h3>Portfolio Website</h3>
