--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="about-img reveal">
-                    <img src="/image/about.jpg" alt="Alex Morgan">
+                    <img src="image/about.jpg" alt="Pranshu Shah">
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 <!-- Project 1 -->
                 <div class="project-card reveal">
                     <div class="project-image">
-                        <img src="/image/pomodoro-extension/pomodoro.webp" alt="Project 1">
+                        <img src="image/pomodoro-extension/pomodoro.webp" alt="Project 1">
                     </div>
                     <div class="project-content">
                         <div class="project-tags">
@@ -122,7 +122,7 @@
                 <!-- Project 2 -->
                 <div class="project-card reveal">
                     <div class="project-image">
-                        <img src="/image/jarvis/jarvis.png" alt="Project 2">
+                        <img src="image/jarvis/jarvis.png" alt="Project 2">
                     </div>
                     <div class="project-content">
                         <div class="project-tags">
@@ -144,7 +144,7 @@
                 <!-- Project 3 -->
                 <div class="project-card reveal">
                     <div class="project-image">
-                        <img src="/image/quiz-java/quiz.jpg" alt="Project 3">
+                        <img src="image/quiz-java/quiz.jpg" alt="Project 3">
                     </div>
                     <div class="project-content">
                         <div class="project-tags">
