--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <a href="#projects">Projects</a>
                     <a href="#experience">Experience</a>
                     <a href="#contact">Contact</a>
-                    <a href="Pranshu_CV.pdf" download="Pranshu_CV.pdf">Resume</a>
+                    <!-- <a href="Pranshu_CV.pdf" download="Pranshu_CV.pdf">Resume</a> -->
+                    <a href="https://flowcv.com/resume/gk04g3tpv6" download="Pranshu_CV.pdf">Resume</a>
                 </div>
                 <button class="hamburger">☰</button>
             </nav>
